# Khyati

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2523b4fd7fa4_initial_schema_all_wfm_modules.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: mixins.py  registry.py  seed.py
backend/app/modules/ai/: router.py  service.py
backend/app/modules/attendance/: models.py  router.py  schemas.py  service.py
backend/app/modules/autonomy/: __init__.py  agents.py  models.py  router.py  schemas.py  service.py
backend/app/modules/forecasting/: engine.py  models.py  router.py  schemas.py  service.py
backend/app/modules/identity/: models.py  rbac.py  router.py  schemas.py  service.py
backend/app/modules/intraday/: models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  router.py  service.py
backend/app/modules/planning/: erlang.py  models.py  router.py  schemas.py  service.py
backend/app/modules/reporting/: router.py  service.py
backend/app/modules/requests/: models.py  router.py  schemas.py  service.py
backend/app/modules/scheduling/: models.py  router.py  schemas.py  service.py
backend/app/modules/workforce/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  helpers.py  test_attendance_api.py  test_auth.py  test_erlang.py  test_forecast_engine.py  test_forecasting_api.py  test_intraday_ai_api.py  test_planning_api.py  test_requests_api.py  test_scheduling_api.py  test_workforce.py
docs/: API.md  DATABASE.md
frontend/: Dockerfile  nginx.conf  tailwind.config.d.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
(+53 files in other folders)
